--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,10 @@
-IfModule mod_rewrite.c
-    RewriteEngine on
-    RewriteCond %{REQUEST_URI} !^public
-    RewriteRule ^(.)$ public$1 [L]
-IfModule
+Options +FollowSymLinks -Indexes
+IndexIgnore */*
+
+RewriteEngine on
+
+# if a directory or a file exists, use it directly
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+
+# otherwise forward it to index.php
